// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`check() works > checks content with rem unit 1`] = `
{
  "issues": {
    "errors": Map {
      "outlook.windows" => [
        {
          "notes": [],
          "position": {
            "end": {
              "column": 19,
              "line": 2,
            },
            "source": "",
            "start": {
              "column": 8,
              "line": 2,
            },
          },
          "support": "none",
          "title": "rem unit",
        },
      ],
    },
    "warnings": Map {},
  },
  "success": false,
}
`;

exports[`check() works > fails with unsupported class selectors 1`] = `
{
  "issues": {
    "errors": Map {
      "gmail.mobile-webmail" => [
        {
          "notes": [],
          "position": {
            "end": {
              "column": 7,
              "line": 2,
            },
            "source": "",
            "start": {
              "column": 2,
              "line": 2,
            },
          },
          "support": "none",
          "title": "Class selector",
        },
      ],
    },
    "warnings": Map {},
  },
  "success": false,
}
`;

exports[`check() works > parses CSS 1`] = `
{
  "issues": {
    "errors": Map {
      "outlook.windows" => [
        {
          "notes": [],
          "position": {
            "end": {
              "column": 46,
              "line": 1,
            },
            "source": "",
            "start": {
              "column": 35,
              "line": 1,
            },
          },
          "support": "none",
          "title": "rem unit",
        },
      ],
      "gmail.mobile-webmail" => [
        {
          "notes": [],
          "position": {
            "end": {
              "column": 49,
              "line": 1,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
            },
          },
          "support": "none",
          "title": "Class selector",
        },
      ],
    },
    "warnings": Map {
      "outlook.windows" => [
        {
          "notes": [
            "Partial. Only \`background-color\` values are supported.",
          ],
          "position": {
            "end": {
              "column": 33,
              "line": 1,
            },
            "source": "",
            "start": {
              "column": 9,
              "line": 1,
            },
          },
          "support": "partial",
          "title": "background",
        },
      ],
      "gmail.ios" => [
        {
          "notes": [
            "Partial. Not supported with non Google accounts.",
          ],
          "position": {
            "end": {
              "column": 49,
              "line": 1,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
            },
          },
          "support": "partial",
          "title": "Class selector",
        },
      ],
      "gmail.android" => [
        {
          "notes": [
            "Partial. Not supported with non Google accounts.",
          ],
          "position": {
            "end": {
              "column": 49,
              "line": 1,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
            },
          },
          "support": "partial",
          "title": "Class selector",
        },
      ],
    },
  },
  "success": false,
}
`;

exports[`check() works > parses inline CSS 1`] = `
{
  "issues": {
    "errors": Map {},
    "warnings": Map {
      "gmail.desktop-webmail" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
      "gmail.ios" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
      "gmail.android" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
      "gmail.mobile-webmail" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
    },
  },
  "success": true,
}
`;

exports[`check() works > should fail on unsupported <style> features 1`] = `
{
  "issues": {
    "errors": Map {
      "gmail.desktop-webmail" => [
        {
          "notes": [],
          "position": {
            "end": {
              "column": 26,
              "line": 3,
            },
            "source": "",
            "start": {
              "column": 9,
              "line": 3,
            },
          },
          "support": "none",
          "title": "filter",
        },
      ],
    },
    "warnings": Map {
      "gmail.desktop-webmail" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
    },
  },
  "success": false,
}
`;

exports[`check() works > should fail on unsupported inline-style features 1`] = `
{
  "issues": {
    "errors": Map {
      "gmail.desktop-webmail" => [
        {
          "notes": [],
          "position": undefined,
          "support": "none",
          "title": "flex-direction:column",
        },
      ],
    },
    "warnings": Map {
      "gmail.desktop-webmail" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
    },
  },
  "success": false,
}
`;

exports[`check() works > should fail on unsupported inline-style features, only css 1`] = `
{
  "issues": {
    "errors": Map {
      "gmail.desktop-webmail" => [
        {
          "notes": [],
          "position": {
            "end": {
              "column": 32,
              "line": 1,
            },
            "source": "",
            "start": {
              "column": 9,
              "line": 1,
            },
          },
          "support": "none",
          "title": "flex-direction:column",
        },
      ],
    },
    "warnings": Map {},
  },
  "success": false,
}
`;

exports[`check() works > should fail with unsupported element-attribute pairs 1`] = `
{
  "issues": {
    "errors": Map {
      "gmail.ios" => [
        {
          "notes": [
            "Buggy. Clicking an anchor link does nothing.",
          ],
          "position": undefined,
          "support": "none",
          "title": "Local anchors",
        },
      ],
    },
    "warnings": Map {
      "gmail.ios" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
    },
  },
  "success": false,
}
`;

exports[`check() works > should fail with unsupported element-attribute pairs 2`] = `
{
  "issues": {
    "errors": Map {
      "outlook.windows" => [
        {
          "notes": [],
          "position": undefined,
          "support": "none",
          "title": "display:flex",
        },
      ],
    },
    "warnings": Map {
      "outlook.windows" => [
        {
          "notes": [
            "Buggy. \`display:none\` does not inherit to inner tables.",
            "Partial. Only supports \`display:none\` (but not on \`<img>\`).",
          ],
          "position": undefined,
          "support": "partial",
          "title": "display",
        },
      ],
    },
  },
  "success": false,
}
`;

exports[`check() works > should work with selectors 1`] = `
{
  "issues": {
    "errors": Map {},
    "warnings": Map {
      "gmail.desktop-webmail" => [
        {
          "notes": [
            "Partial. Only supports \`[attr~=value]\` syntax. Only \`class\` as an attribute name is known to be supported.",
          ],
          "position": {
            "end": {
              "column": 56,
              "line": 2,
            },
            "source": "",
            "start": {
              "column": 7,
              "line": 2,
            },
          },
          "support": "partial",
          "title": "Attribute selector",
        },
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
    },
  },
  "success": true,
}
`;

exports[`check() works > works with blank email template 1`] = `
{
  "issues": {
    "errors": Map {},
    "warnings": Map {
      "gmail.desktop-webmail" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
      "gmail.ios" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
      "gmail.android" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
      "gmail.mobile-webmail" => [
        {
          "notes": [
            "Partial. Replaced by a \`<div>\` with supported attributes.",
          ],
          "position": undefined,
          "support": "partial",
          "title": "<body> element",
        },
      ],
    },
  },
  "success": true,
}
`;

exports[`check() works > works with empty styles 1`] = `
{
  "issues": {
    "errors": Map {},
    "warnings": Map {},
  },
  "success": true,
}
`;
